# QQ-plotter

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
data/: README - Формат данных.txt  columns.yaml
docs/: specification.md
src/: data_loader.py  dist_plotter.py  distribution_fitter.py  main.py  qq_plotter.py
